# lucent-chat

./: .gitignore  .secretscanignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PLAN-tailscale-tunnel.md  README.md  TEXT_TO_SPEECH_MODE_IMPLEMENTATION.md  TODO.md  TTS_MODE_COMPLETE.md  TTS_MODE_README.md  TTS_MODE_UI_PREVIEW.md  package-lock.json  package.json  tsconfig.extensions.json  tsconfig.json  tsconfig.resources.json
.github/: PULL_REQUEST_TEMPLATE.md
.plans/: api-key-manager.md  autocomplete-qol-improvements.md  directory-safeguards.md  dynamic-model-discovery.md  fix-high-cpu-process-lifecycle.md  issue-125-provider-fallback.md  issue-524-git2-migration.md  issue-575-dynamic-model-routing.md  native-perf-optimizations.md  onboarding-detection-wizard.md  preferences-wizard-completeness.md  startup-performance.md  tui-dashboard-cleanup.md  workflow-templates.md
.ralph-teams/: PLAN-1.md  PLAN-2.md  PLAN-3.md  PLAN-4.md  PLAN-5.md  PLAN-6.md  PLAN-7.md  PLAN-8.md
apps/studio/audio-service/: audio_service.py  pyproject.toml
apps/studio/audio-service/lucent_studio_audio_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: FILE-SYSTEM-MAP.md  README.md  commands.md  configuration.md  getting-started.md  runtime-tools.md  troubleshooting.md
pkg/: package.json
scripts/: bump-version.mjs  copy-export-html.cjs  copy-themes.cjs  dev.js  ensure-workspace-builds.cjs  generate-changelog.mjs  link-workspace-packages.cjs  postinstall.js  preview-dashboard.ts  validate-pack.js  validate-pack.sh  version-stamp.mjs  (+1 more)
(+693 files in other folders)
