[project]
name = "lucent-studio-audio-service"
version = "0.1.0"
description = "Packaged Python runtime for Lucent Code Studio voice service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.135.2",
  "kokoro==0.9.4",
  "numpy==2.4.3",
  "onnxruntime==1.24.4",
  "pywhispercpp==1.4.1",
  "uvicorn==0.42.0",
  "websockets==16.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
